--- a/IdentityMicroservice/IdentityMicroservice.csproj
+++ b/IdentityMicroservice/IdentityMicroservice.csproj
@@ -27,4 +27,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NitFlex.ServiceDefaults\NitFlex.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
