--- a/MovieMicroservice/MovieMicroservice.csproj
+++ b/MovieMicroservice/MovieMicroservice.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NitFlex.ServiceDefaults\NitFlex.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
