--- a/RentalMicroservice/RentalMicroservice.csproj
+++ b/RentalMicroservice/RentalMicroservice.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NitFlex.ServiceDefaults\NitFlex.ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
